kub/polls-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polls
  template:
    metadata:
      labels:
        app: polls
    spec:
      containers:
      - name: nginx
        image: nginx:1.14
        ports:
        - containerPort: 80
