kub/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
