kub/polls-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polls-service
spec:
  selector:
    app: polls
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
