kub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /polls
        pathType: Prefix
        backend:
          service:
            name: polls-service
            port:
              number: 80
